--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,9 +6,7 @@ theme:
     text: Roboto
   icon:
     logo: material/library
-
   features:
-    #- navigation.tabs
     - navigation.instant
     - navigation.instant.prefetch
     - navigation.sections
@@ -20,10 +18,6 @@ theme:
     - content.code.annotation
     - content.code.copy
     - content.code.select
-  plugins:
-  - social
-  - search
-  
   language: en
   palette:
     - scheme: default
@@ -47,7 +41,6 @@ extra:
       link: https://twitter.com/hcoco1
     - icon: fontawesome/brands/linkedin
       link: https://www.linkedin.com/in/hcoco1/
-      
   generator: false
 
 markdown_extensions:
@@ -68,13 +61,13 @@ markdown_extensions:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
       emoji_generator: !!python/name:materialx.emoji.to_svg
 plugins:
+  - search
   - mkdocs-pdf
+  - social:
+      cards_layout: default
   
 extra_css:
   - 'custom.css'
-
-
-
 
 copyright: |
   &copy; 2024 <a href="https://www.hcoco1.com"  target="_blank" rel="noopener">Ivan Arias</a>
