--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Penetration Testing Report ☠️
+site_name: Career Simulation 4 ☠️
 site_url: https://hcoco1.github.io/Career-Simulation-4/
 theme:
   name: material
