--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,9 +57,7 @@ markdown_extensions:
   - pymdownx.superfences
   - pymdownx.mark
   - attr_list
-  - pymdownx.emoji:
-      emoji_index: !!python/name:material.extensions.emoji.twemoji
-      emoji_generator: !!python/name:materialx.emoji.to_svg
+  - pymdownx.emoji
 plugins:
   - search
   - mkdocs-pdf
